--- a/assets/css/dbw-cost-calc.css
+++ b/assets/css/dbw-cost-calc.css
@@ -19,7 +19,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 7.5%;
-    margin-top: 75px;
+    margin-top: 35px;
 }
 
 .dbw-cost-calc-fields-col {
@@ -341,6 +341,10 @@ form[data-step="thank-you"] .dbw-cost-calc-thank-you {
 }
 
 @media (max-width: 767px) {
+    .dbw-cost-calc-fields {
+        margin-top: 0;
+    }
+
     body .dbw-cost-calc-fields-col-title {
         font-size: 14px;
         margin-bottom: 20px;
