--- a/assets/css/dbw-cost-calc.css
+++ b/assets/css/dbw-cost-calc.css
@@ -9,6 +9,12 @@ body {
     padding: 22px 10px;
 }
 
+body .dbw-cost-calc-title {
+    font-size: 30px;
+    line-height: 122.5%;
+    text-align: center;
+}
+
 .dbw-cost-calc-form.processing,
 .dbw-cost-calc-form.processing * {
     cursor: wait;
@@ -117,6 +123,10 @@ body .dbw-cost-calc-fields-col-title {
     background: url(../img/dbw-bg.png) no-repeat;
     background-size: contain;
     z-index: -1;
+}
+
+body .dbw-cost-calc-summary .dbw-cost-calc-title {
+    margin-bottom: 95px;
 }
 
 .dbw-cost-calc-summary-item {
@@ -341,6 +351,10 @@ form[data-step="thank-you"] .dbw-cost-calc-thank-you {
 }
 
 @media (max-width: 767px) {
+    body .dbw-cost-calc-title {
+        font-size: 24px;
+    }
+
     .dbw-cost-calc-fields {
         margin-top: 0;
     }
@@ -381,6 +395,10 @@ form[data-step="thank-you"] .dbw-cost-calc-thank-you {
 
     .dbw-cost-calc-summary {
         margin-top: 70px;
+    }
+
+    body .dbw-cost-calc-summary .dbw-cost-calc-title {
+        margin-bottom: 35px;
     }
 
     .dbw-cost-calc-summary-item {
