--- a/assets/css/dbw-cost-calc.css
+++ b/assets/css/dbw-cost-calc.css
@@ -384,7 +384,6 @@ form[data-step="thank-you"] .dbw-cost-calc-thank-you {
     padding: 0.5rem;
     margin-top: 10px;
     border-radius: 15px;
-    background: #fafafa;
     cursor: pointer;
     transition: all 0.2s ease;
     display: flex;
@@ -393,6 +392,12 @@ form[data-step="thank-you"] .dbw-cost-calc-thank-you {
     align-items: center;
     text-align: center;
     position: relative;
+}
+
+.select-footer-block input:checked + span {
+    padding: 4px 10px;
+    border: none !important;
+    background-color: #fff !important; 
 }
 
 
@@ -518,7 +523,7 @@ form[data-step="thank-you"] .dbw-cost-calc-thank-you {
 }
 
 #support-levels-container label.selected {
-    border: 3px solid #394494;
+    border: 2px solid #394494;
     border-radius: 8px;
     padding: 10px;
 }
